<resources>
    <string name="app_name">Busca Tech</string>
    <string name="strBusca">Busca</string>
    <string name="strIngresaInvitado">Ingresa como invitado</string>
    <string name="strO">------O------</string>
    <string name="strNoTienesCuenta">¿No tienes una cuenta? Registrate</string>
    <string name="strIniciaSesion">Iniciar sesión</string>
    <string name="strCreaUnaCuenta">Crear una cuenta</string>
    <string name="strRegistrar">Registrar</string>
    <string name="title_activity_pantalla_principal">PantallaPrincipalActiv</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="strBuscarProducto">Buscar producto</string>

    <!--TEXTOS PARA LOS TITULOS DE LAS ACTIVIDADES-->
    <string name="strBienvenido">¡Bienvenido!</string>
    <string name="strNovedades">Novedades</string>
    <string name="strSugerencias">Sugerencias</string>
    <string name="strBuscaTuProducto">Busca tu producto</string>
    <string name="strMisPreferencias">Mis Favoritos</string>
    <string name="strCreaTuCuenta">Crea tu cuenta</string>
    <string name="strBuscaTech">Busca Tech</string>
    <string name="strSugiereTienda">Sugerir una tienda</string>
    <string name="strNombreTienda">Nombre de la tienda</string>
    <string name="strDireccion">Dirección</string>
    <string name="strDescripcionOpcional">Descripción (Opcional)</string>
    <string name="strCategoriaPrincipal">Categoría principal de la tienda:</string>
    <string name="strSugerir">Sugerir tienda</string>
    <string name="strDetalles">Detalles</string>
    <string name="strEliminar">Eliminar</string>
    <string name="strTomas">Tomás Bravo Ortiz</string>
    <string name="strCorreoElectronico">Correo electrónico:</string>
    <string name="strCorreTommy">tomasbravo702@gmail.com</string>
    <string name="strContraseña">Contraseña:</string>
    <string name="strHecho">Hecho</string>
    <string name="strCambiarNombreUsuario">Cambiar nombre de usuario</string>
    <string name="strNuevoNombreUsuario">Nuevo nombre de usuario</string>
    <string name="strCancelar">Cancelar</string>
    <string name="strCambiarContrasena">Cambiar contraseña</string>
    <string name="strAntiguaContrasena">Antigua contraseña</string>
    <string name="strNuevaContrasena">Nueva contraseña</string>
    <string name="strVeriContrasenaNueva">Verifica contraseña nueva</string>
    <string name="strMiPerfil">Mi perfil</string>
    <string name="strConfiguración">Configuración</string>
    <string name="strTituloBusquedaAv">Buscar producto</string>
    <string name="strTvDispositivo">Dispositivo:</string>
    <string name="strTvPantalla">Pantalla:</string>
    <string name="strTvMemoriaRam">Memoria RAM:</string>
    <string name="strTvMemoriaSecundaria">Memoria S:</string>
    <string name="strTvProcesador">Procesador:</string>
    <string name="strTvPrecio">Precio:</string>
    <string name="strBtnBuscarAv">Buscar</string>
    <string name="strBusquedaAv">Búsqueda Avanzada</string>
    <string name="strBusquedaAvMayusculas">Búsqueda Avanzada</string>
    <string name="strRestaurarContrasena">Restaurar Contraseña</string>
    <string name="strSalir">Salir</string>
    <string name="strtvTienda"><u>TextView</u></string>


    <string-array name="valoresCategoriaTienda">
        <item>Cómputo</item>
        <item>Telefonía</item>
        <item>Accesorios</item>
        <item>Varios</item>
    </string-array>

    <string-array name="Dispositivo">
        <item>Laptop</item>
        <item>PC de escritorio</item>
        <item>Celular</item>
        <item>Tablet</item>
    </string-array>

    <string-array name="Pantalla">
        <item>11 pulgadas</item>
        <item>12 pulgadas</item>
        <item>13 pulgadas</item>
        <item>14 pulgadas</item>
        <item>15 pulgadas</item>
        <item>16 pulgadas o más</item>
    </string-array>

    <string-array name="MemoriaRAM">
        <item>2 GB</item>
        <item>4 GB</item>
        <item>8 GB</item>
        <item>16 GB</item>
    </string-array>

    <string-array name="MemoriaSecundaria">
        <item>512 GB</item>
        <item>1024 GB</item>
        <item>2048 GB</item>
        <item>Mayor a 2048 GB</item>
    </string-array>

    <string-array name="Procesador">
        <item>Intel Core I5-450m</item>
    </string-array>

    <string-array name="Precio">
        <item>Menor a $5,000</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strNuevoCorreoUsuario">Nuevo correo</string>
    <string name="strCambiarCorreo">Cambiar correo electrónico</string>
    <string name="strHintIngresarContrasena">Ingresa tu contraseña actual</string>
    <string name="strOlvidasteTuContrasena">¿Olvidaste tu contraseña?</string>
    <string name="strIntroduceCorreo">Introduce el correo asociado a tu cuenta</string>
    <string name="strBtnEnviar">Enviar</string>
    <string name="strBtnRegresar">Regresar</string>
    <string name="strTituloMisFavoritos">Mis favoritos</string>

</resources>
